# heyg

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  hey1.txt
cli/: pyproject.toml
cli/forge_cli/: client.py  main.py
cli/forge_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
deploy/: Caddyfile  Dockerfile.demo  deploy.sh  docker-compose.prod.yml  docker-compose.vps.yml  nginx-heyg.conf
examples/: request.json
infra/models/: download_models.sh
infra/postgres/: init.sql
pod/: musetalk_setup.sh  prove_render.sh  render_service.py  start_pod.sh
services/avatar/: Dockerfile  requirements.txt
services/avatar/worker/: motion_engine.py  stabilizer.py  tasks.py
services/compositor/: Dockerfile  requirements.txt
services/compositor/worker/: ffmpeg_canvas.py  tasks.py
services/gateway/: Dockerfile  requirements.txt
services/gateway/app/: db.py  main.py  models.py  orchestrator.py  schemas.py
services/lipsync/: Dockerfile  requirements.txt
services/lipsync/worker/: masking.py  musetalk_engine.py  tasks.py
services/voice/: Dockerfile  requirements.txt
shared/: setup.py
shared/forge_shared/: __init__.py  config.py  contracts.py  queue.py  storage.py
skills/forge-avatar/: SKILL.md
skills/forge-translate/: SKILL.md
skills/forge-video/: SKILL.md
tests/: test_schemas.py
tools/: bridge_gateway.py  dev_server.py
web/: Dockerfile  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: CanvasStage.tsx  Shell.tsx
web/lib/: api.ts  projects.ts  types.ts
(+10 files in other folders)
