[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.1.0"
description = "CLI for AvatarForge — self-hosted avatar video generation (HeyGen-style agent interface)"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.scripts]
forge = "forge_cli.main:cli"

# Ship as a single static binary (mirrors HeyGen's CLI distribution):
#   pip install pyinstaller && pyinstaller -F -n forge forge_cli/main.py
# or:  pipx install ./cli
